# csra-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-build-publish.yml  test.yml
csra_server/: background.py  core.py  database.py  db.py  env.py  main.py  models.py  schemas.py
csra_server/models/: task.py  task_status.py
tests/: conftest.py  test_items.py  test_server.py
